UI Fix - Adjusted letter-spacing in audiobook-player and changed nickname display method in login state

--- a/src/pages/Audiobook_Player.css
+++ b/src/pages/Audiobook_Player.css
@@ -21,7 +21,9 @@
   height: 90%;
   margin-top: 0.5rem;
   margin-bottom: 1.5rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
   overflow: hidden;
   text-align: justify;
 }
@@ -65,4 +67,8 @@ button.icon-button {
   width: 600px;
   height: 20px;
   background-color: gray;
+}
+.player-loading-text {
+  font-weight: 600;
+  font-size: 2rem;
 }
